# mcp-tool-optimizer

./: .gitignore  Dockerfile  README.md  agent_sim.py  compare_pools.py  load_test.py  mcpforge.cloud.yaml  mcpforge.real.yaml  mcpforge.yaml  pyproject.toml  railway.toml  run_sse.py  start.sh  test_all.py
.github/workflows/: publish.yml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  api.js
dashboard/src/components/: AuditTable.jsx  PoolList.jsx  ScoreChart.jsx
mcpforge/: api.py  classifier.py  cli.py  config.py  embeddings.py  optimizer.py  pool.py  proxy.py  scorer.py  store.py
mock-mcp-servers/: README.md  register_virtual_mcp.py  seed_metrics.py
mock-mcp-servers/confluence_mcp/: pyproject.toml  server.py
mock-mcp-servers/datadog_mcp/: pyproject.toml  server.py
mock-mcp-servers/github_mcp/: pyproject.toml  server.py
mock-mcp-servers/jira_mcp/: pyproject.toml  server.py
mock-mcp-servers/kubernetes_mcp/: pyproject.toml  server.py
mock-mcp-servers/linear_mcp/: pyproject.toml  server.py
mock-mcp-servers/notion_mcp/: pyproject.toml  server.py
mock-mcp-servers/pagerduty_mcp/: pyproject.toml  server.py
mock-mcp-servers/sentry_mcp/: pyproject.toml  server.py
mock-mcp-servers/slack_mcp/: pyproject.toml  server.py
tests/: seed_db.py  seed_metrics.py  verify_week2.py
